--- a/main.html
+++ b/main.html
@@ -255,7 +255,7 @@
         </header>
         <form id="task-form" class="task-form">
             <div class="input-group">
-                <input type="text" id="task-input" placeholder="What needs to be done?" required>
+                <input type="text" id="task-input" placeholder="Add your tasks here" required>
                 <button type="submit" id="add-task">Add Task</button>
             </div>
         </form>
